# portman

./: .gitignore  CHANGELOG.md  LICENSE  README.md  portman.yaml
.github/workflows/: ci.yml  release.yml
backend/: hatch_build.py  pyproject.toml
backend/portman/: __init__.py  ai.py  api.py  app.py  audit.py  cli.py  config.py  credentials.py  db.py  detect.py  manifest.py  models.py  ports.py  runtime.py  scanner.py  schemas.py  supervisor.py  update.py
backend/tests/: conftest.py  test_ai.py  test_api.py  test_app_spa.py  test_audit.py  test_cli.py  test_cli_commands.py  test_config.py  test_credentials.py  test_detect.py  test_internals.py  test_manifest.py  test_ports.py  test_scanner.py  test_supervisor.py  test_update.py
docs/: ARCHITECTURE.md  PER_PROJECT.md  SECURITY.md
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/dashboard/: AuditFeed.tsx  Dashboard.tsx
frontend/src/components/ports/: PortsTable.tsx  ReservePanel.tsx
frontend/src/components/service/: LogsDrawer.tsx  ServicesPanel.tsx
frontend/src/components/ui/: index.tsx
frontend/src/hooks/: usePoll.test.ts  usePoll.ts
frontend/src/lib/: api.ts
frontend/src/styles/: index.css  tokens.css
