[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portman"
version = "0.1.0"
description = "Local port & service manager: authorize, reserve, supervise and monitor every port on your machine."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "William Eckerleben" }]
keywords = ["ports", "process-manager", "supervisor", "devtools", "localhost"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psutil>=5.9",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
portman = "portman.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["portman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["portman"]
omit = ["portman/cli.py", "portman/app.py"]
