[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "port-man"
version = "0.2.0"
description = "Local port & service manager: authorize, reserve, supervise and monitor every port on your machine."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "William Eckerleben" }]
keywords = ["ports", "process-manager", "supervisor", "devtools", "localhost"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psutil>=5.9",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
portman = "portman.cli:app"

[tool.hatch.build]
# Bundle the built SPA (frontend/dist -> portman/web) into every artifact.
artifacts = ["portman/web/**"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["portman"]
artifacts = ["portman/web/**"]

[tool.hatch.build.targets.sdist]
# The pre-built SPA (portman/web) is bundled by the build hook and shipped here,
# so installs from an sdist serve the UI without needing Node.
include = ["portman", "hatch_build.py"]
artifacts = ["portman/web/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["portman"]
omit = ["portman/cli.py", "portman/app.py"]
